force-app/main/default/objects/HR_Matters_Tracking__c/HR_Matters_Tracking__c.object-meta.xml
<CustomObject>
    <label>HR Matters Tracking</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HR Matters Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Matters Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>