force-app/main/default/objects/HR_Matters_Tracking__c/fields/Coach_Notes_Log__c.field-meta.xml
<CustomField>
    <fullName>Coach_Notes_Log__c</fullName>
    <description>History of notes added through the Coach Notes field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coach Notes Log</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>