force-app/main/default/objects/HR_Matters_Tracking__c/fields/Coach_Status__c.field-meta.xml
<CustomField>
    <fullName>Coach_Status__c</fullName>
    <label>Coach Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Waiting on Client</fullName>
            </value>
            <value>
                <fullName>Waiting on HRG</fullName>
            </value>
            <value>
                <fullName>Sent to Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>