force-app/main/default/objects/HR_Matters_Tracking__c/fields/Developed_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Developed_Recommendation__c</fullName>
    <label>Developed Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recommendation was clearly defined</fullName>
            </value>
            <value>
                <fullName>Recommendation was somewhat defined</fullName>
            </value>
            <value>
                <fullName>Recommendation was not defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>