force-app/main/default/objects/HR_Matters_Tracking__c/fields/Response_Partner_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Response_Partner_Involvement__c</fullName>
    <label>Response Partner Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>