force-app/main/default/objects/HR_Matters_Tracking__c/listViews/HR_Matters_Tracking_All_Matters.listView-meta.xml
<ListView>
    <fullName>HR_Matters_Tracking_All_Matters</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Subject__c</columns>
    <columns>Area_Manager__c</columns>
    <columns>Coach_Status__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reference_Record_Created_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/8/2020</value>
    </filters>
    <label>HR Matters Tracking All Matters</label>
</ListView>