force-app/main/default/objects/HR_Matters_Tracking__c/listViews/HR_Matters_Tracking_Queue_HR_Matters_Tracking.listView-meta.xml
<ListView>
    <fullName>HR_Matters_Tracking_Queue_HR_Matters_Tracking</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Matters Tracking Queue</label>
    <queue>HR_Matters_Tracking_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>